--- a/template.html
+++ b/template.html
@@ -18,8 +18,8 @@
 					Date: {{ when }} <br />
 				</td>
 				<td>
-					<a href="http://www.find-cd.co.uk/search.aspx?title=${encoded_title}&type=keywords">Find-cd</a><br />
-					<a href="http://hmv.com/hmvweb/simpleMultiSearch.do?searchUID=&pGroupID=0&adultFlag=false&simpleSearchString=${encoded_title}&primaryID=0&btnSubmitSearch.x=0&btnSubmitSearch.y=0">HMV</a>
+					<a href="https://www.find-cd.co.uk/search.aspx?title={{ encoded_title }}&type=keywords">Find-cd</a><br />
+					<a href="http://hmv.com/hmvweb/simpleMultiSearch.do?searchUID=&pGroupID=0&adultFlag=false&simpleSearchString={{ encoded_title }}&primaryID=0&btnSubmitSearch.x=0&btnSubmitSearch.y=0">HMV</a>
 				</td>
 				<td align="right">
 					{% set hasImage = album["image"] != None %}
