--- a/template.html
+++ b/template.html
@@ -23,13 +23,10 @@
               href="https://www.find-cd.co.uk/search.aspx?title={{ encoded_title }}&type=keywords"
               >Find-cd</a
             ><br />
-            <a
-              href="http://hmv.com/hmvweb/simpleMultiSearch.do?searchUID=&pGroupID=0&adultFlag=false&simpleSearchString={{ encoded_title }}&primaryID=0&btnSubmitSearch.x=0&btnSubmitSearch.y=0"
-              >HMV</a
-            >
+            <a href="https://www.musicmagpie.co.uk/store/category/?keyword={{ encoded_title }}">Music Magpie</a>
           </td>
           <td align="right">
-            {% if album["image"] is not None %}
+            {% if album["image"] != None %}
             <a href="{{ album.url }}">
               <img src="../{{ album.image }}" width="100" />
             </a>
